# painel-ldo-framework

./: README.md  data.toml  observablehq.config.js  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml
datapackages/reestimativa_2026/data/: reest_rec.csv
scripts/: helper.py  main.py  transform.py
src/: index.md  styles.css
src/data/: dcmefo_analise.csv  fonte_analise.csv  orcamento_analise.csv  receita_analise.csv
